fixed game round overlapping when mobile is horizontal

--- a/src/App.css
+++ b/src/App.css
@@ -100,6 +100,8 @@ tr th {
   @apply font-semibold;
 }
 
-body {
-  orientation: portrait;
+@media screen and (height < 700px) {
+  .game-round {
+    @apply row-start-3 mt-5;
+  }
 }
